tabelas de datasets Ã  parte e reorg

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -903,7 +903,7 @@ year = {2006}
 @InProceedings{conf/ijcnn/SoutoPSACLS08,
   title =       "Ranking and selecting clustering algorithms using a
                  meta-learning approach",
-  author =      "Marc{\'i}lio Carlos Pereira de Souto and Ricardo
+  author =      "Marc{\'i}lio Carlos Pereira Souto and Ricardo
                  Bastos Cavalcante Prud{\^e}ncio and Rodrigo G. F.
                  Soares and Daniel S. A. de Araujo and Ivan G. Costa and
                  Teresa Bernarda Ludermir and Alexander Schliep",
@@ -993,3 +993,34 @@ year = {2006}
   series =      "Lecture Notes in Computer Science",
   \URL =         "http://dx.doi.org/10.1007/978-3-319-07617-1",
 }
+
+@article{doi/ml,
+      author        = "Davi P. Santos and Andr{\'e} Carlos Ponce Leon Ferreira Carvalho",
+      journal = "GitHub Software Repository",
+      title         = "Wrappers for Weka for Scala",
+      month         = "Jan",
+      year          = "2015",
+      doi           = "{10.5281/zenodo.13735}",
+      url           = "{http://dx.doi.org/10.5281/zenodo.13735}",
+}
+
+@article{doi/al,
+      author        = "Davi P. Santos and Andr{\'e} Carlos Ponce Leon Ferreira Carvalho",
+      journal = "GitHub Software Repository",
+      title         = "An Active Learning Library for Scala",
+      month         = "Jan",
+      year          = "2015",
+      doi           = "{10.5281/zenodo.13733}",
+      url           = "{http://dx.doi.org/10.5281/zenodo.13733}",
+}
+
+@article{doi/elm,
+      author        = "Davi P. Santos and Andr{\'e} Carlos Ponce Leon Ferreira Carvalho",
+      journal = "GitHub Software Repository",
+      title         = "ELM implementation in Scala using MTJ/netlib-java/BLAS/LAPACK",
+      month         = "Jan",
+      year          = "2015",
+      doi           = "{10.5281/zenodo.13734}",
+      url           = "{http://dx.doi.org/10.5281/zenodo.13734}",
+}
+
