tabelas de datasets com nichos; falta arrumar %mino p/ ter decimais

--- a/resultados.tex
+++ b/resultados.tex
@@ -1,1 +1,5 @@
-\chapter{Resultados (ou Experimentos e Resultados?)}\label{cap:experimentos}
+\chapter{Resultados}\label{cap:resultados}
+\ano{aqui vão aparecer apenas dados das strats mais importantes;
+as tabelas completam ficarão no apêndice inclusive resultados de kff e balanced-ee;
+outra opção para kff e balanced-ee é ficarem apenas na tabela referente a learner=svm do
+cap de experimentos}
