--- a/tese.tex
+++ b/tese.tex
@@ -72,6 +72,7 @@
 
 \usepackage{pdfpages}
 \usepackage{multirow}
+\usepackage{makecell}
 \hypersetup{
     pdftitle = {\meutitulo},
     pdfsubject = {},
@@ -176,6 +177,8 @@
 \usepackage[printonlyused,withpage]{acronym}
 
 \usepackage{doi}
+\usepackage{pbox}
+
 \begin{document}
 \input tarefas
 \pagestyle{empty}
